# kirc-rs

./: .oxfmtrc.json  README.md  package.json
.github/workflows/: main.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  fs.rs  kirc.rs  lib.rs  logging.rs  memento.rs
src-tauri/src/kirc/: commands.rs  core.rs  ctcp.rs  emits.rs  manager.rs  persistence.rs  state.rs  types.rs
src-tauri/src/kirc/state/: app.rs  app_state.rs  channel.rs  kirc.rs  server.rs  server_state.rs
src-tauri/src/kirc/types/: server.rs
src/routes/: +page.svelte  ChangeNicknameModal.svelte  MessageView.svelte  Modal.svelte  ServerModal.svelte  UnreadDivider.svelte
src/services/: ircService.ts
src/stores/: irc.svelte.ts
src/types/: kirc.svelte.ts  payloads.svelte.ts
